kubernetes/privatebin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privatebin
  namespace: privatebin
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: privatebin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: privatebin
    spec:
      securityContext:
        fsGroup: 82
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/hostname: k8s-wk-0
      containers:
        - name: privatebin
          image: privatebin/pdo:2.0.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            runAsUser: 65534
            runAsGroup: 82
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: privatebin-data
              mountPath: /srv/data
            - name: privatebin-config
              mountPath: /srv/cfg/conf.php
              subPath: conf.php
              readOnly: true
            - name: run
              mountPath: /run
            - name: tmp
              mountPath: /tmp
            - name: nginx-cache
              mountPath: /var/lib/nginx/tmp
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: privatebin-config
          secret:
            secretName: privatebin-secrets
            items:
              - key: conf.php
                path: conf.php
        - name: privatebin-data
          persistentVolumeClaim:
            claimName: privatebin-data
        - name: run
          emptyDir:
            medium: Memory
        - name: tmp
          emptyDir:
            medium: Memory
        - name: nginx-cache
          emptyDir: {}
