kubernetes/privatebin/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin-postgres
  namespace: privatebin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: privatebin-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
