kubernetes/privatebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: privatebin
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
