kubernetes/privatebin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin
  namespace: privatebin
spec:
  ingressClassName: nginx
  rules:
    - host: privatebin.nodadyoushutup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: privatebin
                port:
                  number: 8080
